src/objects/ProductConsumed.object
<CustomObject>
    <fields>
        <fullName>ArticleSKU__c</fullName>
        <description>Article number from Product record</description>
        <formula>ProductItem.Product2.Article__c</formula>
        <label>Article (SKU)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationERPWarehouseID__c</fullName>
        <description>Consumed by Field Service integration to tag the correct warehouse Id on the Service Order Line item</description>
        <formula>ProductItem.Location.ERPWarehouseId__c</formula>
        <label>Location ERP Warehouse ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentLocationERPWarehouseId__c</fullName>
        <description>To sent the parent location ERP warehouse Id with the work orders lines items for field service integration</description>
        <formula>ProductItem.Location.ParentLocation.ERPWarehouseId__c</formula>
        <label>Parent Location ERP Warehouse Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductArticle__c</fullName>
        <description>This field will be used as a reference in DS Service Report</description>
        <formula>ProductItem.Product2.Article__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <description>Custom field to bring the product name from the Product Item. This should be placed in the layout and not the standard one, which allows the users to add products from the price book instead of the Product Item</description>
        <formula>ProductItem.Product2.Name</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SerialNumber__c</fullName>
        <formula>ProductItem.SerialNumber__c</formula>
        <label>Serial Number</label>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>